--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ worked very hard on this - I know it's late, but I wanted it to be good!
   --font-size-h2: 2rem;
   --font-size-h3: 1rem;
   --font-size-h4: .75rem;
-  --font-size-text: 1.15rem;
+  --font-size-text: 1rem;
   --border-radius: 8px;
 }
 
@@ -81,6 +81,7 @@ h4 {
 h1 {
   font-size: var(--font-size-h1);
   font-size: clamp(2rem, 7vw, var(--font-size-h1));
+  text-align: center;
 }
 
 h2 {
@@ -106,8 +107,21 @@ li {
   font-size: var(--font-size-text);
 }
 
-p {
-  margin: 0 0 1rem;
+p, ul, li, .vid {
+  margin: 0% 5% 0% 5%;
+}
+
+.vidcontainer {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 strong {
@@ -136,19 +150,16 @@ main h3 {
 }
 
 header {
-  display: grid;
-  grid-template-columns: auto auto;
   min-height: 15vh;
   margin: 5% 5% 0% 0%;
 }
 header img {
-  display: grid;
   max-width: 25%;
-  margin: 0% 0% 0% 10%;
+  margin: auto;
 }
 header h1 {
-  display: grid;
   padding: 1%;
+  margin: auto;
 }
 header h2 {
   max-width: 30ch;
@@ -169,7 +180,7 @@ nav ul {
 
 nav ul a {
   display: inline-grid;
-  padding: 0.5rem;
+  padding: 0rem 0.5rem 0rem 0.5rem;
   color: var(--color-secondary);
   font-size: 1.25rem;
   text-decoration: none;
@@ -189,15 +200,22 @@ nav ul li {
   margin: 0.25rem;
 }
 
-.skip {
+.skip a{
   position: absolute;
-  top: -65px;
+  top: -100px;
   background-color: white;
   overflow: hidden;
   color: #00274C;
 
 }
-.skip:focus {
+.skip a:focus {
   top: 25px;
   padding: 0.5%;
 }
+
+/* header {
+  display: grid;
+  grid-template-columns: auto auto;
+  min-height: 15vh;
+  margin: 5% 5% 0% 0%;
+} */
