--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,11 @@ worked very hard on this - I know it's late, but I wanted it to be good!
   --color-text: #131516;
   --color-anchor: #00274C;
   --font-family: "Montserrat", sans-serif;
-  --font-weight-strong: 500;
-  --font-size-h1: 3rem;
+  --font-weight-strong: 550;
+  --font-size-h1: 2.5rem;
   --font-size-h2: 2rem;
-  --font-size-h3: 1rem;
-  --font-size-h4: .75rem;
+  --font-size-h3: 1.5rem;
+  --font-size-h4: 1rem;
   --font-size-text: 1rem;
   --border-radius: 8px;
 }
@@ -70,10 +70,15 @@ select {
 }
 
 h1,
-h2,
+h2
+{
+  font-weight: var(--font-weight-strong);
+  line-height: 1;
+  margin-bottom: 0.1em;
+}
+
 h3,
 h4 {
-  font-weight: var(--font-weight-strong);
   line-height: 1;
   margin-bottom: 0.1em;
 }
@@ -88,19 +93,23 @@ h2 {
   font-size: var(--font-size-h2);
   font-size: clamp(2rem, 4vw, var(--font-size-h2));
   text-align: center;
-  background-color: var(--color-secondary);
+  background-color: var(--color-background);
   align-self: center;
-  color: var(--color-background);
+  color: var(--color-text);
   padding: 0.5em 0.5em;
 }
 
 h3 {
   font-size: var(--font-size-h3);
+  text-align: left;
+  background-color: var(--color-background);
+  color: var(--color-text);
+  padding: 0.5em 0.5em;
 }
 
-h4 {
+/* h4 {
   font-size: var(--font-size-h4);
-}
+} */
 
 p,
 li {
@@ -124,10 +133,6 @@ p, ul, li, .vid {
   height: 100%;
 }
 
-strong {
-  font-weight: var(--font-weight-strong);
-}
-
 a {
   color: var(--color-anchor);
 }
@@ -145,13 +150,12 @@ main {
 main:focus {
   outline: none;
 }
-main h3 {
-  color: var(--color-primary);
-}
 
 header {
   min-height: 15vh;
-  margin: 5% 5% 0% 0%;
+  background-color: #00274C;
+  color: white;
+  margin: 0;
 }
 header img {
   max-width: 25%;
@@ -161,12 +165,9 @@ header h1 {
   padding: 1%;
   margin: auto;
 }
-header h2 {
-  max-width: 30ch;
-}
 
 nav {
-  background-color: var(--color-primary-alt);
+  background-color: var(--color-primary);
   display: block;
 }
 nav ul {
@@ -181,7 +182,7 @@ nav ul {
 nav ul a {
   display: inline-grid;
   padding: 0rem 0.5rem 0rem 0.5rem;
-  color: var(--color-secondary);
+  color: var(--color-text);
   font-size: 1.25rem;
   text-decoration: none;
 }
@@ -213,9 +214,46 @@ nav ul li {
   padding: 0.5%;
 }
 
-/* header {
-  display: grid;
-  grid-template-columns: auto auto;
-  min-height: 15vh;
-  margin: 5% 5% 0% 0%;
-} */
+footer {
+  padding: 3%;
+  background-color: #00274C;
+  color: white;
+}
+footer a {
+  color: white;
+}
+
+
+ @media screen and (min-width: 825px) 
+ /* desktop view!!!!!!! YAAAAY */
+ {
+    section {
+          display: grid;
+     }
+
+     section ul, li {
+        display: grid;
+        grid-column: 1 / span 2;
+        text-align: left;
+     }
+
+    header h1 {
+      text-align: left;
+      margin: auto auto auto 0%;
+    }
+    
+    h3 {
+      text-align: center;
+    }
+    header img {
+      margin: auto;
+      max-width: 40%;
+    }
+    header {
+      display: grid;
+      grid-template-columns: 20% auto;
+      min-height: 15vh;
+      margin: 0;
+    }
+
+ }
